--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -37,7 +37,7 @@ jobs:
         for SCHEME in ${SCHEMES}; do
           echo "Testing scheme ${SCHEME}"
           xcodebuild ${XCODEBUILD_CONFIG} -scheme ${SCHEME} build-for-testing -skipUnavailableActions | xcpretty -f `xcpretty-travis-formatter`
-          xcodebuild ${XCODEBUILD_CONFIG} -scheme ${SCHEME} -destination "${DESTINATION}" test-without-building -enableCodeCoverage ${ENABLE_CODECOV} -skipUnavailableActions | xcpretty -f `xcpretty-travis-formatter`
+          xcodebuild ${XCODEBUILD_CONFIG} -scheme ${SCHEME} -destination "${DESTINATION}" test-without-building -skipUnavailableActions | xcpretty -f `xcpretty-travis-formatter`
         done
   macos:
     name: macOS(SwiftPM)
