--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -65,6 +65,8 @@ jobs:
         echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
         apt-get install -y fontconfig ttf-mscorefonts-installer
     - uses: actions/checkout@v1
+      with:
+        submodules: recursive
     - name: Build
       run: swift build -c release
     - name: Run tests
