--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -70,4 +70,4 @@ jobs:
     - name: Build
       run: swift build -c release
     - name: Run tests
-      run: swift test -c release --enable-test-discovery
+      run: swift test -c release
