--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -68,6 +68,6 @@ jobs:
       with:
         submodules: recursive
     - name: Build
-      run: swift build -c release
+      run: swift build -c release --enable-test-discovery
     - name: Run tests
       run: swift test -c release --enable-test-discovery
