--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -18,11 +18,6 @@ jobs:
           - name: tvOS
             sdk: appletvsimulator
             destination: 'platform=tvOS Simulator,name=Apple TV 4K'
-    env:
-      USE_XCOEBUILD: true
-      SDK: ${{ matrix.sdk }}
-      DESTINATION: ${{ matrix.destination }}
-      ENABLE_CODECOV: ${{ matrix.enable_codecov }}
     steps:
     - uses: actions/checkout@v1
       with:
@@ -31,10 +26,18 @@ jobs:
       uses: SusanDoggie/swift-action@master
       with:
         action: build
+        use_xcodebuild: true
+        sdk: ${{ matrix.sdk }}
+        destination: ${{ matrix.destination }}
+        enable_codecov: ${{ matrix.enable_codecov }}
     - name: Run tests
       uses: SusanDoggie/swift-action@master
       with:
         action: test
+        use_xcodebuild: true
+        sdk: ${{ matrix.sdk }}
+        destination: ${{ matrix.destination }}
+        enable_codecov: ${{ matrix.enable_codecov }}
     - uses: codecov/codecov-action@v1
       if: ${{ matrix.enable_codecov }}
   macos:
