--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -18,6 +18,11 @@ jobs:
           - name: tvOS
             sdk: appletvsimulator
             destination: 'platform=tvOS Simulator,name=Apple TV 4K'
+    env:
+      use_xcodebuild: true
+      sdk: ${{ matrix.sdk }}
+      destination: ${{ matrix.destination }}
+      enable_codecov: ${{ matrix.enable_codecov }}
     steps:
     - uses: actions/checkout@v1
       with:
@@ -26,18 +31,10 @@ jobs:
       uses: SusanDoggie/swift-action@master
       with:
         action: build
-        use_xcodebuild: true
-        sdk: ${{ matrix.sdk }}
-        destination: ${{ matrix.destination }}
-        enable_codecov: ${{ matrix.enable_codecov }}
     - name: Run tests
       uses: SusanDoggie/swift-action@master
       with:
         action: test
-        use_xcodebuild: true
-        sdk: ${{ matrix.sdk }}
-        destination: ${{ matrix.destination }}
-        enable_codecov: ${{ matrix.enable_codecov }}
     - uses: codecov/codecov-action@v1
       if: ${{ matrix.enable_codecov }}
   macos:
