--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -64,6 +64,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Install ICC profiles
+      run: apt-get update && apt-get install -y icc-profiles 
     - name: Install fonts
       run: |
         export DEBIAN_FRONTEND=noninteractive		
