--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -97,3 +97,33 @@ jobs:
       uses: SusanDoggie/swift-action@master
       with:
         action: build
+  ubuntu_swift_nightly:
+    name: ${{ matrix.image }}
+    container:
+      image: docker://swiftlang/swift:${{ matrix.image }}
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        image: [nightly-xenial, nightly-bionic]
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: recursive
+    - name: Prepare
+      run: apt-get update
+    - name: Install ICC profiles
+      run: apt-get install -y icc-profiles
+    - name: Install fonts
+      run: |
+        export DEBIAN_FRONTEND=noninteractive
+        echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
+        apt-get install -y fontconfig fonts-noto ttf-mscorefonts-installer
+    - name: Build
+      uses: SusanDoggie/swift-action@master
+      with:
+        action: build
+    - name: Run tests
+      uses: SusanDoggie/swift-action@master
+      with:
+        action: test
