--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -81,7 +81,7 @@ jobs:
       uses: SusanDoggie/swift-action@master
       with:
         action: test
-  ubuntu_swift_5_1:
+  swift_5_1:
     name: ${{ matrix.image }}
     container:
       image: docker://swift:${{ matrix.image }}
@@ -97,7 +97,7 @@ jobs:
       uses: SusanDoggie/swift-action@master
       with:
         action: build
-  ubuntu_swift_nightly:
+  swift_nightly:
     name: ${{ matrix.image }}
     container:
       image: docker://swiftlang/swift:${{ matrix.image }}
@@ -105,20 +105,11 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        image: [nightly-xenial, nightly-bionic]
+        image: [nightly-xenial, nightly-bionic, nightly-centos8, nightly-amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-    - name: Prepare
-      run: apt-get update
-    - name: Install ICC profiles
-      run: apt-get install -y icc-profiles
-    - name: Install fonts
-      run: |
-        export DEBIAN_FRONTEND=noninteractive
-        echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
-        apt-get install -y fontconfig fonts-noto ttf-mscorefonts-installer
     - name: Build
       uses: SusanDoggie/swift-action@master
       with:
