--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -140,6 +140,15 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Prepare
+      run: yum update
+    - name: Install ICC profiles
+      run: yum install -y icc-profiles
+    - name: Install fonts
+      run: |
+        export DEBIAN_FRONTEND=noninteractive
+        echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
+        yum install -y fontconfig fonts-noto ttf-mscorefonts-installer
     - name: Install dependencies
       run: yum update && yum install -y zlib-devel
     - name: Build
