--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -140,14 +140,12 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-    - name: Prepare
-      run: yum update
+    - name: Install dependencies
+      run: yum update && yum install -y git-all zlib-devel
     - name: Install ICC profiles
       run: yum install -y icc-profiles
     - name: Install fonts
       run: yum install -y fontconfig
-    - name: Install zlib
-      run: yum install -y zlib-devel
     - name: Build
       uses: SusanDoggie/swift-action@master
       with:
