--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -64,6 +64,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Prepare		
+      run: apt-get update
     - name: Install ICC profiles
       run: apt-get install -y icc-profiles
     - name: Install fonts
@@ -108,6 +110,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Prepare		
+      run: apt-get update
     - name: Install ICC profiles
       run: apt-get install -y icc-profiles
     - name: Install fonts
@@ -136,6 +140,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Prepare		
+      run: yum update
     - name: Install ICC profiles
       run: yum install -y icc-profiles
     - name: Install fonts
