--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -143,7 +143,7 @@ jobs:
     - name: Prepare		
       run: yum update
     - name: Install fonts
-      run: yum install -y fontconfig
+      run: yum install -y fontconfig google-noto-*
     - name: Build
       uses: SusanDoggie/swift-action@master
       with:
