--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -94,7 +94,7 @@ jobs:
       with:
         submodules: recursive
     - name: Prepare		
-      run: yum update
+      run: yum update -y
     - name: Install fonts
       run: yum install -y fontconfig google-noto-*
     - name: Build
@@ -165,7 +165,7 @@ jobs:
       with:
         submodules: recursive
     - name: Prepare		
-      run: yum update
+      run: yum update -y
     - name: Install fonts
       run: yum install -y fontconfig google-noto-*
     - name: Build
