--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -41,6 +41,8 @@ jobs:
   macos:
     name: macOS(SwiftPM)
     runs-on: macOS-latest
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_12_beta.app/Contents/Developer
     steps:
     - uses: actions/checkout@v1
       with:
