--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: [centos7, centos8, amazonlinux2]
+        image: [centos8, amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
@@ -137,7 +137,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        image: [nightly-centos7, nightly-centos8, nightly-amazonlinux2]
+        image: [nightly-centos8, nightly-amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
