--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -30,7 +30,7 @@ jobs:
             use_xcodebuild: false
     env:
       use_xcodebuild: ${{ matrix.use_xcodebuild }}
-      schemes: Doggie
+      schemes: Doggie-Package
       sdk: ${{ matrix.sdk }}
       destination: ${{ matrix.destination }}
       enable_codecov: ${{ matrix.enable_codecov }}
