--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -48,15 +48,15 @@ jobs:
         action: test
     - uses: codecov/codecov-action@v1
       if: ${{ matrix.enable_codecov }}
-  ubuntu_swift_latest:
-    name: latest-${{ matrix.image }}
+  ubuntu_swift:
+    name: ${{ matrix.image }}
     container:
       image: docker://swift:${{ matrix.image }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        image: [xenial, bionic, focal]
+        image: [5.3-xenial, 5.3-bionic, 5.3-focal, 5.4-xenial, 5.4-bionic, 5.4-focal]
     steps:
     - uses: actions/checkout@v1
       with:
@@ -78,32 +78,7 @@ jobs:
       uses: SusanDoggie/swift-action@main
       with:
         action: test
-  linux_swift_latest:
-    name: latest-${{ matrix.image }}
-    container:
-      image: docker://swift:${{ matrix.image }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        image: [centos8, amazonlinux2]
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - name: Prepare		
-      run: yum update -y
-    - name: Install fonts
-      run: yum install -y fontconfig google-noto-*
-    - name: Build
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: build
-    - name: Run tests
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: test
-  ubuntu_swift_5_3:
+  linux_swift:
     name: ${{ matrix.image }}
     container:
       image: docker://swift:${{ matrix.image }}
@@ -111,37 +86,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [5.3-xenial, 5.3-bionic, 5.3-focal]
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - name: Prepare		
-      run: apt-get update
-    - name: Install ICC profiles
-      run: apt-get install -y icc-profiles
-    - name: Install fonts
-      run: |
-        export DEBIAN_FRONTEND=noninteractive
-        echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
-        apt-get install -y fontconfig fonts-noto ttf-mscorefonts-installer
-    - name: Build
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: build
-    - name: Run tests
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: test
-  linux_swift_5_3:
-    name: ${{ matrix.image }}
-    container:
-      image: docker://swift:${{ matrix.image }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        image: [5.3-centos8, 5.3-amazonlinux2]
+        image: [5.3-centos8, 5.3-amazonlinux2, 5.4-centos8, 5.4-amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
