--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -49,14 +49,15 @@ jobs:
     - uses: codecov/codecov-action@v1
       if: ${{ matrix.enable_codecov }}
   ubuntu_swift:
-    name: ${{ matrix.image }}
+    name: ${{ matrix.swift_version }}-${{ matrix.distro }}
     container:
-      image: docker://swift:${{ matrix.image }}
+      image: docker://swift:${{ matrix.swift_version }}-${{ matrix.distro }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        image: [5.3-xenial, 5.3-bionic, 5.3-focal, 5.4-xenial, 5.4-bionic, 5.4-focal]
+        swift_version: [5.3, 5.4]
+        distro: [xenial, bionic, focal]
     steps:
     - uses: actions/checkout@v1
       with:
@@ -79,14 +80,15 @@ jobs:
       with:
         action: test
   linux_swift:
-    name: ${{ matrix.image }}
+    name: ${{ matrix.swift_version }}-${{ matrix.distro }}
     container:
-      image: docker://swift:${{ matrix.image }}
+      image: docker://swift:${{ matrix.swift_version }}-${{ matrix.distro }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        image: [5.3-centos8, 5.3-amazonlinux2, 5.4-centos8, 5.4-amazonlinux2]
+        swift_version: [5.3, 5.4]
+        distro: [centos8, amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
@@ -104,15 +106,15 @@ jobs:
       with:
         action: test
   ubuntu_swift_nightly:
-    name: ${{ matrix.image }}
+    name: nightly-${{ matrix.distro }}
     container:
-      image: docker://swiftlang/swift:${{ matrix.image }}
+      image: docker://swiftlang/swift:nightly-${{ matrix.distro }}
     runs-on: ubuntu-latest
     continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
-        image: [nightly-xenial, nightly-bionic, nightly-focal]
+        distro: [xenial, bionic, focal]
     steps:
     - uses: actions/checkout@v1
       with:
@@ -135,15 +137,15 @@ jobs:
       with:
         action: test
   linux_swift_nightly:
-    name: ${{ matrix.image }}
+    name: nightly-${{ matrix.distro }}
     container:
-      image: docker://swiftlang/swift:${{ matrix.image }}
+      image: docker://swiftlang/swift:nightly-${{ matrix.distro }}
     runs-on: ubuntu-latest
     continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
-        image: [nightly-centos8, nightly-amazonlinux2]
+        distro: [centos8, amazonlinux2]
     steps:
     - uses: actions/checkout@v1
       with:
